<resources>
    <string name="app_name">PayMan</string>

    <string name="paylist">Payment List</string>
    <string name="newpay">New Payment</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="cost">Cost</string>
    <string name="date">Date</string>
    <string name="paid">Paid</string>

</resources>
